omada/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: omada
  name: omada
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: omada
  template:
    metadata:
      labels:
        app: omada
    spec:
      nodeSelector:
        kubernetes.io/hostname: mario
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      volumes:
      - name: tls-secrets
        secret:
          defaultMode: 416
          secretName: omada-tls
      - name: data
        nfs:
          path: /srv/share/backed/appdata/omada
          server: mario.local.ongy.net
          readOnly: false
      containers:
        - image: mbentley/omada-controller:6.2
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
            runAsUser: 0
            runAsGroup: 0
            privileged: false
          startupProbe:
            failureThreshold: 30
            periodSeconds: 10
            httpGet:
              path: /
              port: 8043
              scheme: HTTPS
              httpHeaders:
              - name: Host
                value: omada.local.ongy.net
          # This exists to restart the container if the cert runs out
          # cert-manager rotates it, but the controller doesn't realize
          livenessProbe:
            failureThreshold: 6
            periodSeconds: 10
            exec:
              command:
              - /usr/bin/wget
              - -O
              - /dev/null
              - https://omada.local.ongy.net
          name: omada-controller
          resources:
            limits:
              memory: "2048Mi"
          volumeMounts:
          - name: data
            mountPath: "/opt/tplink/EAPController/data"
          - mountPath: "/cert"
            name: tls-secrets
---
