omada/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: omada
spec:
  selector:
    app: omada
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8043
      name: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omada
spec:
  hostnames:
  - omada.local.ongy.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: kube-system
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: omada
      port: 443
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
